--- a/.gitignore
+++ b/.gitignore
@@ -1,180 +1,16 @@
-<TableStep.Root>
-  {data.map((group, groupIdx) =>
-    group.flatMap((item: any, itemIdx: number) => {
-      // Se for "Approvals and Restrictions" com steps internos:
-      if (
-        item.name === "Approvals and Restrictions" &&
-        Array.isArray(approvalsSteps) &&
-        approvalsSteps.length > 0
-      ) {
-        return approvalsSteps.map((approvalStep: any, idx: number) => (
-          <Fragment key={`approval-${approvalStep.id || idx}`}>
-            <TableStep.Title status={approvalStep.status}>
-              {/* Numeração tipo 3.1, 3.2... */}
-              <span className="font-normal">
-                {`${groupIdx + 1}.${idx + 1} `}
-              </span>
-              <span className="font-semibold">
-                {approvalStep.name.replace(/^Approvals and Restrictions:? ?/, "")}
-              </span>
-            </TableStep.Title>
+{steps.map((step, idx) => (
+  <React.Fragment key={step.id || idx}>
+    <TableStep.Title>{step.name}</TableStep.Title>
+    {/* Aqui TableStep.Columns/TableStep.Body dos participantes desse step */}
 
-            <TableStep.Columns>
-              <TableStep.Line>Participant</TableStep.Line>
-              <TableStep.Line>Signature</TableStep.Line>
-              <TableStep.Line>Completed</TableStep.Line>
-              <TableStep.Line>Status</TableStep.Line>
-              <TableStep.Line>Result</TableStep.Line>
-              <TableStep.Line>Comments</TableStep.Line>
-            </TableStep.Columns>
-
-            {approvalStep.permissions?.people?.map((people: any, pidx: number, arr: any[]) => (
-              <Fragment key={`${approvalStep.id}-${people.userId}-${pidx}`}>
-                <TableStep.Body>
-                  <TableStep.Item>
-                    <div className="flex items-center text-[#636574]">
-                      {people.firstName} {people.lastName}
-                      {people.addedAt && people.addedBy && (
-                        <div className="text-sm leading-[21px] font-normal text-[#636574]">
-                          {" "}
-                          - Added by {people.addedBy}
-                        </div>
-                      )}
-                    </div>
-                  </TableStep.Item>
-                  <TableStep.Item>
-                    {people.action ? people.action[0].signature : "-"}
-                  </TableStep.Item>
-                  <TableStep.Item>
-                    {people.action
-                      ? formatDateTime(people.action[0].date)
-                      : "-"}
-                  </TableStep.Item>
-                  <TableStep.Item>
-                    {approvalStep.status === "completed" ||
-                    approvalStep.status === "pending"
-                      ? approvalStep.status === "pending"
-                        ? "Active"
-                        : (
-                            <Status
-                              width={164}
-                              type={statusFieldMap[approvalStep.status]}
-                            >
-                              {statusLabelMap[approvalStep.status]}
-                            </Status>
-                          )
-                      : "-"}
-                  </TableStep.Item>
-                  <TableStep.Item>
-                    {people.action ? (
-                      <Status
-                        width={164}
-                        type={statusFieldMap[people.action[0].type]}
-                      >
-                        {people.action[0].type === "success"
-                          ? approvalStep.successLabel
-                          : people.action[0].subtype}
-                      </Status>
-                    ) : (
-                      "-"
-                    )}
-                  </TableStep.Item>
-                  <TableStep.Item>
-                    {people.action && people.action[0].comment
-                      ? people.action[0].comment
-                      : "-"}
-                  </TableStep.Item>
-                </TableStep.Body>
-                {pidx !== arr.length - 1 && (
-                  <div className="border-b border-[#EBEBEB] mx-10" />
-                )}
-              </Fragment>
-            ))}
-          </Fragment>
-        ));
-      }
-
-      // Os demais steps normais (não-approvals)
-      return (
-        <Fragment key={`${item.status}-${groupIdx}-${itemIdx}`}>
-          <TableStep.Title status={item.status}>
-            {`${groupIdx + 1}. ${item.name}`}
-          </TableStep.Title>
-
-          <TableStep.Columns>
-            <TableStep.Line>Participant</TableStep.Line>
-            <TableStep.Line>Signature</TableStep.Line>
-            <TableStep.Line>Completed</TableStep.Line>
-            <TableStep.Line>Status</TableStep.Line>
-            <TableStep.Line>Result</TableStep.Line>
-            <TableStep.Line>Comments</TableStep.Line>
-          </TableStep.Columns>
-
-          {item.permissions?.people?.map(
-            (people: any, idx: number, arr: any[]) => (
-              <Fragment key={`${people.userId}-${idx}`}>
-                <TableStep.Body>
-                  <TableStep.Item>
-                    <div className="flex items-center text-[#636574]">
-                      {people.firstName} {people.lastName}
-                      {people.addedAt && people.addedBy && (
-                        <div className="text-sm leading-[21px] font-normal text-[#636574]">
-                          {" "}
-                          - Added by {people.addedBy}
-                        </div>
-                      )}
-                    </div>
-                  </TableStep.Item>
-                  <TableStep.Item>
-                    {people.action ? people.action[0].signature : "-"}
-                  </TableStep.Item>
-                  <TableStep.Item>
-                    {people.action
-                      ? formatDateTime(people.action[0].date)
-                      : "-"}
-                  </TableStep.Item>
-                  <TableStep.Item>
-                    {item.status === "completed" || item.status === "pending"
-                      ? item.status === "pending"
-                        ? "Active"
-                        : (
-                            <Status
-                              width={164}
-                              type={statusFieldMap[item.status]}
-                            >
-                              {statusLabelMap[item.status]}
-                            </Status>
-                          )
-                      : "-"}
-                  </TableStep.Item>
-                  <TableStep.Item>
-                    {people.action ? (
-                      <Status
-                        width={164}
-                        type={statusFieldMap[people.action[0].type]}
-                      >
-                        {people.action[0].type === "success"
-                          ? item.successLabel
-                          : people.action[0].subtype}
-                      </Status>
-                    ) : (
-                      "-"
-                    )}
-                  </TableStep.Item>
-                  <TableStep.Item>
-                    {people.action && people.action[0].comment
-                      ? people.action[0].comment
-                      : "-"}
-                  </TableStep.Item>
-                </TableStep.Body>
-                {idx !== arr.length - 1 && (
-                  <div className="border-b border-[#EBEBEB] mx-10" />
-                )}
-              </Fragment>
-            )
-          )}
-        </Fragment>
-      );
-    })
-  )}
-</TableStep.Root>
+    {/* Se for o step de approvals, renderiza os substeps */}
+    {step.name === "Approvals and Restrictions" && step.substeps && (
+      step.substeps.map((sub, subIdx) => (
+        <React.Fragment key={sub.id || subIdx}>
+          <TableStep.Title>{sub.name}</TableStep.Title>
+          {/* TableStep.Columns/TableStep.Body dos participantes do substep */}
+        </React.Fragment>
+      ))
+    )}
+  </React.Fragment>
+))}
